tests/baselines/reference/parserComputedPropertyName19.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName19.ts(1,10): error TS1170: Computed property names are not allowed in type literals.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName19.ts (1 errors) ====
    var v: { [e]? };
             ~~~
!!! error TS1170: Computed property names are not allowed in type literals.